syntax = "proto3";

option csharp_namespace = "CinemaGrpc";

package Cinema;

service CinemaGrpcService {
	rpc GetAllCinemas(GetAllCinemasGrpcRequestDTO) returns (GetAllCinemasGrpcReplyDTO);
	rpc CreateCinema(CreateCinemaGrpcRequestDTO) returns (CreateCinemaGrpcReplyDTO);
	rpc UpdateCinema(UpdateCinemaGrpcRequestDTO) returns (UpdateCinemaGrpcReplyDTO);
	rpc DeleteCinema(DeleteCinemaGrpcRequestDTO) returns (DeleteCinemaGrpcReplyDTO);

	rpc GetAllRoomTypes(GetAllRoomTypesGrpcRequestDTO) returns (GetAllRoomTypesGrpcReplyDTO);
	rpc CreateRoomType(CreateRoomTypeGrpcRequestDTO) returns (CreateRoomTypeGrpcReplyDTO);
	rpc UpdateRoomType(UpdateRoomTypeGrpcRequestDTO) returns (UpdateRoomTypeGrpcReplyDTO);
	rpc DeleteRoomType(DeleteRoomTypeGrpcRequestDTO) returns (DeleteRoomTypeGrpcReplyDTO);

}

message GetAllCinemasGrpcRequestDTO {
	string Id = 1;
	string Name = 2;
	string City = 3;
	string Status = 4;
}

message GetAllCinemasGrpcReplyDTO {
	bool Result = 1;
	string Message = 2;
	int32 StatusCode = 3;
	repeated GetAllCinemasGrpcReplyDataDTO Data = 4;
}

message GetAllCinemasGrpcReplyDataDTO {
	string Name = 1;
	string Address = 2;
	string City = 3;
	string Email = 4;
	string PhoneNumber = 5;
	string OpenTime = 6;
	string CloseTime = 7;
	int32 TotalRoom = 8;
	string Status = 9;
}

message CreateCinemaGrpcRequestDTO {
	string Name = 1;
	string Address = 2;
	string City = 3;
	string PhoneNumber = 4;
	string Email = 5;
	string OpenTime = 6;
	string CloseTime = 7;
	string Status = 8;
	string CreatedBy = 9;
}

message CreateCinemaGrpcReplyDTO {
	bool Result = 1;
	string Message = 2;
	int32 StatusCode = 3;
	CreateCinemaGrpcReplyDataDTO Data = 4;
}

message CreateCinemaGrpcReplyDataDTO {
	string Id = 1;
	string Name = 2;
	string Address = 3;
	string City = 4;
	string PhoneNumber = 5;
	string Email = 6;
	string OpenTime = 7;
	string CloseTime = 8;
	string Status = 9;
	string CreatedBy = 10;
}


message UpdateCinemaGrpcRequestDTO {
	string Id = 1;
	string Name = 2;
	string Address = 3;
	string City = 4;
	string PhoneNumber = 5;
	string Email = 6;
	string OpenTime = 7;
	string CloseTime = 8;
	string Status = 9;
}

message UpdateCinemaGrpcReplyDTO {
	bool Result = 1;
	string Message = 2;
	int32 StatusCode = 3;
	UpdateCinemaGrpcReplyDataDTO Data = 4;
}

message UpdateCinemaGrpcReplyDataDTO {
	string Name = 1;
	string Address = 2;
	string City = 3;
	string PhoneNumber = 4;
	string Email = 5;
	string OpenTime = 6;
	string CloseTime = 7;
	string Status = 8;
}

message DeleteCinemaGrpcRequestDTO {
	string Id = 1;
}

message DeleteCinemaGrpcReplyDTO {
	bool Result = 1;
	string Message = 2;
	int32 StatusCode = 3;
}

message CreateRoomTypeGrpcRequestDTO {
	string Type = 1; 
    string BasePrice = 2;
    string CreatedBy = 3;
}

message CreateRoomTypeGrpcReplyDTO {
	bool Result = 1;
	string Message = 2;
	int32 StatusCode = 3;
	CreateRoomTypeGrpcReplyDataDTO Data = 4;
}

message CreateRoomTypeGrpcReplyDataDTO {
	string Id = 1;
	string Type = 2; 
    string BasePrice = 3;
	string CreatedBy = 4;
}


message GetAllRoomTypesGrpcRequestDTO {
	string Id = 1;
	string Type = 2;
	string BasePrice = 3;
}

message GetAllRoomTypesGrpcReplyDTO {
	bool Result = 1;
	string Message = 2;
	int32 StatusCode = 3;
	repeated GetAllRoomTypesGrpcReplyDataDTO Data = 4;
}

message GetAllRoomTypesGrpcReplyDataDTO {
	string Type = 1;
	string BasePrice = 2;
}

message UpdateRoomTypeGrpcRequestDTO {
	string Id = 1;
	string Type = 2;
	string BasePrice = 3;
}

message UpdateRoomTypeGrpcReplyDTO {
	bool Result = 1;
	string Message = 2;
	int32 StatusCode = 3;
	UpdateRoomTypeGrpcReplyDataDTO Data = 4;
}

message UpdateRoomTypeGrpcReplyDataDTO {
	string Type = 1;
	string BasePrice = 2;
}

message DeleteRoomTypeGrpcRequestDTO {
	string Id = 1;
}

message DeleteRoomTypeGrpcReplyDTO {
	bool Result = 1;
	string Message = 2;
	int32 StatusCode = 3;
}